--- a/feed/Cargo.toml
+++ b/feed/Cargo.toml
@@ -6,3 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+gix-odb = "0.43"
+gix-traverse = "0.24"
+gix-diff = "0.28"
+gix-hash = "0.10.3"
+gix-object = "0.28"
+snafu = "0.7.4"
