--- a/page/package.json
+++ b/page/package.json
@@ -20,6 +20,7 @@
     "typescript": "5.0.3"
   },
   "devDependencies": {
+    "@iconify-json/mdi": "^1.1.50",
     "@iconify-json/svg-spinners": "^1.1.1",
     "@unocss/preset-icons": "^0.51.8",
     "@unocss/webpack": "^0.51.8",
