feat(feed): impl last_commit and some_files
Signed-off-by: Ruihang Xia <waynestxia@gmail.com>

--- a/feed/Cargo.toml
+++ b/feed/Cargo.toml
@@ -15,6 +15,7 @@ gix-traverse = "0.24"
 gix-diff = "0.28"
 gix-hash = "0.10.3"
 gix-object = "0.28"
+rand = "0.8.5"
 regex = "1.7.3"
 serde = { version = "1", features = ["derive"] }
 snafu = "0.7.4"
