feat(feed): fix public APIs
Signed-off-by: Ruihang Xia <waynestxia@gmail.com>

--- a/feed/Cargo.toml
+++ b/feed/Cargo.toml
@@ -18,7 +18,10 @@ gix-object = "0.28"
 rand = "0.8.5"
 regex = "1.7.3"
 serde = { version = "1", features = ["derive"] }
+sqlx = { version = "0.6", features = ["runtime-tokio-rustls"] }
 snafu = "0.7.4"
 tokio = { version = "1.26", features = ["full"] }
+tower = "0.4"
+tower-http = { version = "0.4", features = ["cors"] }
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
