--- a/feed/Cargo.toml
+++ b/feed/Cargo.toml
@@ -17,8 +17,13 @@ gix-hash = "0.10.3"
 gix-object = "0.28"
 rand = "0.8.5"
 regex = "1.7.3"
+reqwest = "0.11.18"
 serde = { version = "1", features = ["derive"] }
-sqlx = { version = "0.6", features = ["runtime-tokio-rustls"] }
+sqlx = { version = "0.6", features = [
+    "runtime-tokio-rustls",
+    "mysql",
+    "postgres",
+] }
 snafu = "0.7.4"
 tokio = { version = "1.26", features = ["full"] }
 tower = "0.4"
