--- a/page/package.json
+++ b/page/package.json
@@ -13,6 +13,8 @@
     "@types/react": "18.0.32",
     "@types/react-dom": "18.0.11",
     "axios": "^1.4.0",
+    "echarts": "^5.4.2",
+    "echarts-for-react": "^3.0.2",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
